--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="page-nav">
-            <a href="./index.html" class="logo"><span class="weblogo">Web</span>Studio</a>
+            <a href="./index.html" class="logo">Web<span class="weblogo">Studio</span></a>
             <ul>
                 <li><a href="#studio" class="link">Studio</a></li>
                 <li><a href="#portfolio" class="link">Portfolio</a></li>
