--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <header>
         <nav class="page-nav">
-            <a href="./index.html" class="logo">Web<span class="weblogo">Studio</span></a>
             <ul>
+                <li><a href="./index.html" class="logo">Web<span class="weblogo">Studio</span></a></li>
                 <li><a href="#studio" class="link">Studio</a></li>
                 <li><a href="#portfolio" class="link">Portfolio</a></li>
                 <li><a href="#contacts" class="link">Contacts</a></li>
@@ -32,6 +32,7 @@
     </header>
 
     <main>
+
         <section class="section-title">
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="page-button">Order Service</button>
@@ -74,33 +75,25 @@
         <section class="team">
             <h2 id="studio" class="title">Our Team</h2>
             <ul>
-                <li>
-                    <div class="team-box">
-                        <img src="./images/img1.jpg" alt="team1" width="264" />
-                        <h3 class="name-team">Mark Guerrero</h3>
-                        <p class="text-team">Product Designer</p>
-                    </div>
+                <li class="team-box">
+                    <img src="./images/img1.jpg" alt="team1" width="264" />
+                    <h3 class="name-team">Mark Guerrero</h3>
+                    <p class="text-team">Product Designer</p>
                 </li>
-                <li>
-                    <div class="team-box">
-                        <img src="./images/img2.jpg" alt="team2" width="264" height="260" />
-                        <h3 class="name-team">Tom Ford</h3>
-                        <p class="text-team">Frontend Developer</p>
-                    </div>
+                <li class="team-box">
+                    <img src="./images/img2.jpg" alt="team2" width="264" height="260" />
+                    <h3 class="name-team">Tom Ford</h3>
+                    <p class="text-team">Frontend Developer</p>
                 </li>
-                <li>
-                    <div class="team-box">
-                        <img src="./images/img3.jpg" alt="team3" width="264" height="260" />
-                        <h3 class="name-team">Camila Garcia</h3>
-                        <p class="text-team">Marketing</p>
-                    </div>
+                <li class="team-box">
+                    <img src="./images/img3.jpg" alt="team3" width="264" height="260" />
+                    <h3 class="name-team">Camila Garcia</h3>
+                    <p class="text-team">Marketing</p>
                 </li>
-                <li>
-                    <div class="team-box">
-                        <img src="./images/img4.jpg" alt="team4" width="264" height="260" />
-                        <h3 class="name-team">Daniel Wilson</h3>
-                        <p class="text-team">UI Designer</p>
-                    </div>
+                <li class="team-box">
+                    <img src="./images/img4.jpg" alt="team4" width="264" height="260" />
+                    <h3 class="name-team">Daniel Wilson</h3>
+                    <p class="text-team">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -140,6 +133,7 @@
                 </li>
             </ul>
         </section>
+
     </main>
 
     <footer class="footer">
@@ -150,6 +144,7 @@
             marketing & growth solutions.
         </p>
     </footer>
+
 </body>
 
 </html>
