update html and css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <header>
-        <nav class="page-nav">
-            <ul>
+        <nav>
+            <ul class="page-nav">
                 <li><a href="./index.html" class="logo">Web<span class="weblogo">Studio</span></a></li>
                 <li><a href="#studio" class="link">Studio</a></li>
                 <li><a href="#portfolio" class="link">Portfolio</a></li>
