--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#contacts" class="link">Contacts</a></li>
             </ul>
         </nav>
+
         <address class="page-adress">
             <ul>
                 <li><a href="mailto:info@devstudio.com" class="link-adress"> info@devstudio.com </a></li>
@@ -137,8 +138,7 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo-footer"><span class="weblogo">Web</span><span
-                class="studiologo">Studio</span></a>
+        <a href="./index.html" class="logo-footer">Web<span class="studiologo">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
