update html and css

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <header>
-        <nav>
-            <ul class="page-nav">
-                <li><a href="./index.html" class="logo">Web<span class="weblogo">Studio</span></a></li>
+        <nav class="page-nav">
+            <a href="./index.html" class="logo">Web<span class="weblogo">Studio</span></a>
+            <ul>
                 <li><a href="#studio" class="link">Studio</a></li>
                 <li><a href="#portfolio" class="link">Portfolio</a></li>
                 <li><a href="#contacts" class="link">Contacts</a></li>
