--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <nav class="page-nav">
             <a href="./index.html" class="logo">Web<span class="weblogo">Studio</span></a>
             <ul>
-                <li><a href="#studio" class="link">Studio</a></li>
-                <li><a href="#portfolio" class="link">Portfolio</a></li>
-                <li><a href="#contacts" class="link">Contacts</a></li>
+                <li><a href="" class="link">Studio</a></li>
+                <li><a href="" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
 
