--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="page-nav">
             <a href="./index.html" class="logo">Web<span class="weblogo">Studio</span></a>
             <ul>
-                <li><a href="" class="link">Studio</a></li>
+                <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
